--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Mystery Class Records</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="dev-resources/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="dev-resources/images/favicon.ico" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
@@ -24,7 +24,7 @@
     <header class="header" data-expanded="false">
       <div class="logo">
         <a href="">
-          <img src="images/header/header-logo.svg" alt="Logo">
+          <img src="dev-resources/images/header/header-logo.svg" alt="Logo">
         </a>
       </div>
       <nav class="nav">
@@ -37,7 +37,7 @@
       </nav>
       <div class="hamburger-icon">
         <button aria-label="Toggle Menu">
-          <img src="images/header/hamburger-icon.svg" alt="Hamburger Menu">
+          <img src="dev-resources/images/header/hamburger-icon.svg" alt="Hamburger Menu">
         </button>
       </div>
     </header>
@@ -47,7 +47,7 @@
     <!-- Hero Section -->
     <div class="hero">
       <video class="hero-video" autoplay muted loop playsinline preload="auto" loading="lazy">
-        <source src="images/home/home-hero-video-resized.mp4" type="video/mp4">
+        <source src="dev-resources/images/home/home-hero-video-resized.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
       <div class="hero-text">
@@ -60,7 +60,7 @@
     <div class="latest-release">
 
       <div class="side-quests-vol-1-hero">
-      <img src="images/home/side-quests-vol-1-hero.png" alt="Side Quests Vol. 1 Hero">
+      <img src="dev-resources/images/home/side-quests-vol-1-hero.png" alt="Side Quests Vol. 1 Hero">
       </div>
 
       <div class="release-text">
@@ -85,8 +85,8 @@
         <a href="store/mcr-001/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="images/products/mcr-001/mcr-001.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette" class="merch-block-product-image default-image">
-              <img src="images/products/mcr-001/mcr-001-hover.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette (Hover)" class="merch-block-product-image hover-image">
+              <img src="dev-resources/images/products/mcr-001/mcr-001.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette" class="merch-block-product-image default-image">
+              <img src="dev-resources/images/products/mcr-001/mcr-001-hover.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette (Hover)" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -103,8 +103,8 @@
         <a href="store/mcr-002/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
-              <img src="images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
+              <img src="dev-resources/images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
+              <img src="dev-resources/images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -121,8 +121,8 @@
         <!-- <a href="store/mcr-002v/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl" class="merch-block-product-image default-image">
-              <img src="images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl (Hover)" class="merch-block-product-image hover-image">
+              <img src="dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl" class="merch-block-product-image default-image">
+              <img src="dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl (Hover)" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -139,8 +139,8 @@
         <a href="store/mcr-003/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="images/products/mcr-003/mcr-003.webp" alt="Cryhard - Stretch Us Outta Here Cassette" class="merch-block-product-image default-image">
-              <img src="images/products/mcr-003/mcr-003-hover.webp" alt="Cryhard - Stretch Us Outta Here Cassette (Hover)" class="merch-block-product-image hover-image">
+              <img src="dev-resources/images/products/mcr-003/mcr-003.webp" alt="Cryhard - Stretch Us Outta Here Cassette" class="merch-block-product-image default-image">
+              <img src="dev-resources/images/products/mcr-003/mcr-003-hover.webp" alt="Cryhard - Stretch Us Outta Here Cassette (Hover)" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -157,8 +157,8 @@
         <a href="store/new-001/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="images/products/new-001/new-001.webp" alt="Portable Cassette Player - Transparent" class="merch-block-product-image default-image">
-              <img src="images/products/new-001/new-001-hover.webp" alt="Portable Cassette Player - Transparent(Hover)" class="merch-block-product-image hover-image">
+              <img src="dev-resources/images/products/new-001/new-001.webp" alt="Portable Cassette Player - Transparent" class="merch-block-product-image default-image">
+              <img src="dev-resources/images/products/new-001/new-001-hover.webp" alt="Portable Cassette Player - Transparent(Hover)" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -182,7 +182,7 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="">
-              <img src="images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="dev-resources/images/footer/footer-logo.svg" alt="Footer Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
@@ -197,23 +197,23 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="dev-resources/images/footer/footer-icon.svg" alt="Footer Icon">
         </div>
         <div class="footer-copyright">
           <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
-            <img src="images/social-icons/facebook-icon.svg" alt="Facebook Icon">
+            <img src="dev-resources/images/social-icons/facebook-icon.svg" alt="Facebook Icon">
           </a>
           <a href="https://www.instagram.com/mysteryclass/" target="_blank">
-            <img src="images/social-icons/instagram-icon.svg" alt="Instagram Icon">
+            <img src="dev-resources/images/social-icons/instagram-icon.svg" alt="Instagram Icon">
           </a>
           <a href="https://www.youtube.com/@mysteryclassrecords9824" target="_blank">
-            <img src="images/social-icons/youtube-icon.svg" alt="YouTube Icon">
+            <img src="dev-resources/images/social-icons/youtube-icon.svg" alt="YouTube Icon">
           </a>
           <a href="https://www.tiktok.com/@mysteryclassrecords" target="_blank">
-            <img src="images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
+            <img src="dev-resources/images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
           </a>
         </div>
       </div>
