--- a/roster/cryhard/index.html
+++ b/roster/cryhard/index.html
@@ -7,8 +7,8 @@
     <title>Cryhard - Artist Page</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../../images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../dev-resources/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../dev-resources/images/favicon.ico" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
@@ -23,7 +23,7 @@
     <header class="header">
       <div class="logo">
         <a href="../../">
-          <img src="../../images/header/header-logo.svg" alt="Logo">
+          <img src="../../dev-resources/images/header/header-logo.svg" alt="Logo">
         </a>
       </div>
       <nav class="nav">
@@ -33,10 +33,10 @@
         <a href="" class="cart">CART</a>
       </nav>
       <div class="rainbow-strip">
-        <img src="../../images/header/header-rainbow-strip.svg" alt="Rainbow Strip">
+        <img src="../../dev-resources/images/header/header-rainbow-strip.svg" alt="Rainbow Strip">
       </div>
       <div class="hamburger-icon">
-        <img src="../../images/header/hamburger-icon.svg" alt="Hamburger Menu">
+        <img src="../../dev-resources/images/header/hamburger-icon.svg" alt="Hamburger Menu">
       </div>
     </header>
     <div class="header-spacer"></div>
@@ -48,15 +48,15 @@
         <p class="artist-location">OKLAHOMA CITY, OK</p>
       </div>
       <div class="artist-image-container">
-        <img src="../../images/cryhard-artist-pic.png" alt="Cryhard Band Photo" class="artist-image">
+        <img src="../../dev-resources/images/cryhard-artist-pic.png" alt="Cryhard Band Photo" class="artist-image">
       </div>
       <div class="artist-buttons">
         <button class="listen-now-button">▶ Listen Now</button>
         <div class="artist-social-icons">
-          <a href=""><img src="../../images/social-icons/facebook-icon.svg" alt="Facebook"></a>
-          <a href=""><img src="../../images/social-icons/instagram-icon.svg" alt="Instagram"></a>
-          <a href=""><img src="../../images/social-icons/youtube-icon.svg" alt="YouTube"></a>
-          <a href=""><img src="../../images/social-icons/tiktok-icon.svg" alt="TikTok"></a>
+          <a href=""><img src="../../dev-resources/images/social-icons/facebook-icon.svg" alt="Facebook"></a>
+          <a href=""><img src="../../dev-resources/images/social-icons/instagram-icon.svg" alt="Instagram"></a>
+          <a href=""><img src="../../dev-resources/images/social-icons/youtube-icon.svg" alt="YouTube"></a>
+          <a href=""><img src="../../dev-resources/images/social-icons/tiktok-icon.svg" alt="TikTok"></a>
         </div>
       </div>
       <div class="artist-description">
@@ -78,7 +78,7 @@
       <div class="related-merch-content">
         <!-- Rainbow Container Top -->
         <div class="rainbow-container-top">
-          <img src="../../images/products/rainbow-container-top.png" alt="Rainbow Container Top">
+          <img src="../../dev-resources/images/products/rainbow-container-top.png" alt="Rainbow Container Top">
         </div>
 
         <!-- Merch Content -->
@@ -90,7 +90,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <a href="../../store/mcr-002/" class="merch-link">
-                  <img src="../../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                  <img src="../../dev-resources/images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
                 </a>
               </div>
               <div class="merch-block-details-container">
@@ -110,7 +110,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <a href="../../store/mcr-002/" class="merch-link">
-                  <img src="../../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                  <img src="../../dev-resources/images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
                 </a>
               </div>
               <div class="merch-block-details-container">
@@ -130,7 +130,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <a href="../../store/mcr-002/" class="merch-link">
-                  <img src="../../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                  <img src="../../dev-resources/images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
                 </a>
               </div>
               <div class="merch-block-details-container">
@@ -150,7 +150,7 @@
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <a href="../../store/mcr-002/" class="merch-link">
-                  <img src="../../images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
+                  <img src="../../dev-resources/images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
                 </a>
               </div>
               <div class="merch-block-details-container">
@@ -171,7 +171,7 @@
 
         <!-- Rainbow Container Bottom -->
         <div class="rainbow-container-bottom">
-          <img src="../../images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
+          <img src="../../dev-resources/images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
         </div>
       </div>
     </section>
@@ -182,7 +182,7 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../../">
-              <img src="../../images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="../../dev-resources/images/footer/footer-logo.svg" alt="Footer Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
@@ -199,23 +199,23 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../../images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="../../dev-resources/images/footer/footer-icon.svg" alt="Footer Icon">
         </div>
         <div class="footer-copyright">
           <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
-            <img src="../../images/social-icons/facebook-icon.svg" alt="Facebook Icon">
+            <img src="../../dev-resources/images/social-icons/facebook-icon.svg" alt="Facebook Icon">
           </a>
           <a href="https://www.instagram.com/mysteryclass/" target="_blank">
-            <img src="../../images/social-icons/instagram-icon.svg" alt="Instagram Icon">
+            <img src="../../dev-resources/images/social-icons/instagram-icon.svg" alt="Instagram Icon">
           </a>
           <a href="https://www.youtube.com/@mysteryclassrecords9824" target="_blank">
-            <img src="../../images/social-icons/youtube-icon.svg" alt="YouTube Icon">
+            <img src="../../dev-resources/images/social-icons/youtube-icon.svg" alt="YouTube Icon">
           </a>
           <a href="https://www.tiktok.com/@mysteryclassrecords" target="_blank">
-            <img src="../../images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
+            <img src="../../dev-resources/images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
           </a>
         </div>
       </div>
