--- a/roster/index.html
+++ b/roster/index.html
@@ -7,8 +7,8 @@
     <title>Artists - Mystery Class Records</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../dev-resources/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../dev-resources/images/favicon.ico" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
@@ -23,7 +23,7 @@
     <header class="header" data-expanded="false">
       <div class="logo">
         <a href="../">
-          <img src="../images/header/header-logo.svg" alt="Logo">
+          <img src="../dev-resources/images/header/header-logo.svg" alt="Logo">
         </a>
       </div>
       <nav class="nav">
@@ -36,7 +36,7 @@
       </nav>
       <div class="hamburger-icon">
         <button aria-label="Toggle Menu">
-          <img src="../images/header/hamburger-icon.svg" alt="Hamburger Menu">
+          <img src="../dev-resources/images/header/hamburger-icon.svg" alt="Hamburger Menu">
         </button>
       </div>
     </header>
@@ -52,7 +52,7 @@
         <div class="artist-block">
             <div class="artist-image-container">
               <a href="cryhard">
-                <img src="../images/cryhard-artist-pic.png" alt="Cryhard">
+                <img src="../dev-resources/images/cryhard-artist-pic.png" alt="Cryhard">
               </a>
             </div>
             <a href="cryhard" class="artist-name">CRYHARD</a>
@@ -78,7 +78,7 @@
         <div class="artist-block">
           <div class="artist-image-container">
             <a href="acid-baptism">
-              <img src="../images/acid-baptism-artist-pic.png" alt="Acid Baptism">
+              <img src="../dev-resources/images/acid-baptism-artist-pic.png" alt="Acid Baptism">
             </a>
           </div>
           <a href="acid-baptism" class="artist-name">ACID BAPTISM</a>
@@ -93,7 +93,7 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../">
-              <img src="../images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="../dev-resources/images/footer/footer-logo.svg" alt="Footer Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
@@ -108,23 +108,23 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="../dev-resources/images/footer/footer-icon.svg" alt="Footer Icon">
         </div>
         <div class="footer-copyright">
           <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
-            <img src="../images/social-icons/facebook-icon.svg" alt="Facebook Icon">
+            <img src="../dev-resources/images/social-icons/facebook-icon.svg" alt="Facebook Icon">
           </a>
           <a href="https://www.instagram.com/mysteryclass/" target="_blank">
-            <img src="../images/social-icons/instagram-icon.svg" alt="Instagram Icon">
+            <img src="../dev-resources/images/social-icons/instagram-icon.svg" alt="Instagram Icon">
           </a>
           <a href="https://www.youtube.com/@mysteryclassrecords9824" target="_blank">
-            <img src="../images/social-icons/youtube-icon.svg" alt="YouTube Icon">
+            <img src="../dev-resources/images/social-icons/youtube-icon.svg" alt="YouTube Icon">
           </a>
           <a href="https://www.tiktok.com/@mysteryclassrecords" target="_blank">
-            <img src="../images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
+            <img src="../dev-resources/images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
           </a>
         </div>
       </div>
