--- a/roster/cryhard/index.html
+++ b/roster/cryhard/index.html
@@ -4,7 +4,7 @@
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cryhard - Artist Page</title>
+    <title>Cryhard</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../../dev-resources/images/favicon.ico" type="image/x-icon">
@@ -47,17 +47,19 @@
         <h1 class="artist-name">CRYHARD</h1>
         <p class="artist-location">OKLAHOMA CITY, OK</p>
       </div>
+      <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1387178041/size=small/bgcol=ffffff/linkcol=0687f5/artwork=none/transparent=true/" seamless><a href="https://cryhardtypebeat.bandcamp.com/album/of-course-i-will">Of Course I Will by Cryhard</a></iframe>
       <div class="artist-image-container">
         <img src="../../dev-resources/images/cryhard-artist-pic.png" alt="Cryhard Band Photo" class="artist-image">
       </div>
       <div class="artist-buttons">
-        <button class="listen-now-button">▶ Listen Now</button>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/34rOpTVLQjki1QYVqDhcdx?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <div class="artist-social-icons">
           <a href=""><img src="../../dev-resources/images/social-icons/facebook-icon.svg" alt="Facebook"></a>
           <a href=""><img src="../../dev-resources/images/social-icons/instagram-icon.svg" alt="Instagram"></a>
           <a href=""><img src="../../dev-resources/images/social-icons/youtube-icon.svg" alt="YouTube"></a>
           <a href=""><img src="../../dev-resources/images/social-icons/tiktok-icon.svg" alt="TikTok"></a>
         </div>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/34rOpTVLQjki1QYVqDhcdx?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       </div>
       <div class="artist-description">
         <p>
