--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Hero Section -->
     <div class="hero">
       <video class="hero-video" autoplay muted loop playsinline preload="auto" loading="lazy">
-        <source src="assets/images/home/home-hero-video-resized.mp4" type="video/mp4">
+        <source src="assets/videos/home/hero-video-resized.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
       <div class="hero-text">
@@ -56,11 +56,10 @@
       </div>
     </div>
     
-    <!-- Latest Release Section -->
-    <div class="latest-release">
-
+    <!-- Featured Release Section -->
+    <div class="featured-release">
       <div class="side-quests-vol-1-hero">
-      <img src="assets/images/home/side-quests-vol-1-hero.png" alt="Side Quests Vol. 1 Hero">
+      <img src="assets/images/products/mcr-007/mcr-007.webp" alt="Featured Release">
       </div>
 
       <div class="release-text">
